--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="content__header">
-            <img src="lo">
+            <img src="logo.png">
         </header>
         <main class="content__main">
             <section class="content__section">
