--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="content__card">
                     <h1>
-                        Proventos
+                        Gastos
                         <img src="" alt="">
                     </h1>
                     <p>
@@ -32,14 +32,38 @@
                 </div>
                 <div class="content__card">
                     <h1>
-                        Proventos
+                        Saldo
                         <img src="" alt="">
                     </h1>
                     <p>
                         1500,00
                     </p>
                 </div>
-                
+            </section>
+            <section class="content__section__desc">
+                <div class="content__desc">
+                    <h4>
+                        Descrição
+                        <p>
+                            <input type="number">
+                        </p>
+                    </h4>
+                    <h4>
+                        Valor
+                        <p>
+                            <input type="number">
+                        </p>
+                    </h4>
+                    <h4>
+                        <input type="radio">
+                        Entrada
+                    </h4>
+                    <h4>
+                        <input type="radio">
+                        Saida
+                    </h4>
+                    <button class="button"  type="submit"> <img src="" alt=""> Salvar</button>
+                </div>
             </section>
         </main>
         <footer class="content__footer">
