--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Finanças</title>
     </head>
     <body>
@@ -15,7 +15,7 @@
                 <div class="content__card">
                     <h1>
                         Proventos
-                        <img src="" alt="">
+                        <img src="dolar.png" alt="">
                     </h1>
                     <p>
                         1500,00
@@ -40,39 +40,98 @@
                     </p>
                 </div>
             </section>
-            <section class="content__section__desc">
+            <div class="content__section__desc">
                 <div class="content__desc">
-                    <h4>
-                        Descrição
-                        <p>
-                            <input type="number">
-                        </p>
-                    </h4>
-                    <h4>
-                        Valor
-                        <p>
-                            <input type="number">
-                        </p>
-                    </h4>
-                    <h4>
-                        <input type="radio">
-                        Entrada
-                    </h4>
-                    <h4>
-                        <input type="radio">
-                        Saida
-                    </h4>
-                    <button class="button"  type="submit"> <img src="" alt=""> Salvar</button>
+                    <input type="text" required>
+                    <span>Descrição</span>
+                    <i></i>
                 </div>
-            </section>
+                <div class="content__desc">
+                    <input type="text" required>
+                    <span>Valor</span>
+                    <i></i>
+                </div>
+                <div class="content___radio">
+                    <input type="radio">
+                    <span>
+                        Entrada
+                    </span>
+                    <input type="radio">
+                    <span>
+                        Saida
+                    </span>
+                </div>
+                <button class="button" type="submit">
+                    <img src="" alt="">
+                    Salvar
+                </button>
+            </div>
+            <div class="content___table">
+                <table>
+                    <tr>
+                        <th>Descrição</th>
+                        <th>Valor</th>
+                        <th>Status</th>
+                        <th>Data</th>
+                        <th>Opções</th>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                    <tr>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                        <td> *</td>
+                    </tr>
+                </table>
+            </div>
         </main>
         <footer class="content__footer">
-            <a href="">
-                <img src="instagram.svg">
-            </a>
-            <a href="">
-                <img src="linkedin.svg">
-            </a>
+            <div>
+                <a href="">
+                    <img src="instagram.svg" alt="instagram">
+                </a>
+                <a href="">
+                    <img src="linkedin.svg" alt="linkedin">
+                </a>
+            </div>
+            <span>
+                DevDu 2023, © Copyright - Todos os Direitos Reservados.
+            </span>
         </footer>
     </body>
 </html>
