--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         </main>
         <footer class="content__footer">
             <div>
+                DevDu 2023, © Copyright - Todos os Direitos Reservados.
+            </div>
+            <div>
                 <a href="">
                     <img src="instagram.svg" alt="instagram">
                 </a>
@@ -129,9 +132,6 @@
                     <img src="linkedin.svg" alt="linkedin">
                 </a>
             </div>
-            <span>
-                DevDu 2023, © Copyright - Todos os Direitos Reservados.
-            </span>
         </footer>
     </body>
 </html>
