--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div class="content__card">
                     <h1>
                         Saldo
-                        <img src="https://cdn-icons-png.flaticon.com/256/5610/5610944.png" alt="Checked">
-                        <img src="https://cdn-icons-png.flaticon.com/512/5610/5610989.png" alt="Alerta" id="alerta">
+                        <ion-icon name="checkmark-circle"></ion-icon>
+                        <ion-icon name="alert-circle"></ion-icon>
                     </h1>
                     <p>
                         R$ 1500,00
@@ -59,7 +59,7 @@
                     <span>Valor</span>
                     <i></i>
                 </div>
-                <div class="content___radio">
+                <div class="content___desc___radio">
                     <input type="radio">
                     <span>
                         Entrada
@@ -69,7 +69,7 @@
                         Saida
                     </span>
                 </div>
-                <button class="button" type="submit">
+                <button class="content___desc___button" type="submit">
                     <ion-icon name="add-circle-outline"></ion-icon>
                     Salvar
                 </button>
@@ -94,50 +94,50 @@
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
+                        <td> Gás</td>
+                        <td> R$ 120</td>
+                        <td> Saida</td>
+                        <td> 24/08/2023</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
                     <tr>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
                     <tr>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
                     <tr>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
                     <tr>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
-                        <td> *</td>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
                         <td class="btn-actions">
                             <ion-icon name="create-outline"></ion-icon>
                             <ion-icon name="trash-outline"></ion-icon>
@@ -151,17 +151,17 @@
                 DevDu 2023, © Copyright - Todos os Direitos Reservados.
             </div>
             <div class="links">
-                <a href="">
+                <a href="https://www.instagram.com/t_wo_d/" target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="">
+                <a href="https://www.linkedin.com/in/eduardo-santos-pessoa-602ab4231/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="">
+                <a href="https://www.facebook.com/Eduardo.santos3117" target="_blank">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
             </a>
-            <a href="">
+            <a href="https://github.com/Edusanpe" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
         </div>
