--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <div class="content__card">
                     <h1>
                         Proventos
-                        <img src="Imagem1.gif" alt="dollar">
+                        <ion-icon name="trending-up"></ion-icon>
                     </h1>
                     <p>
                         R$ 1500,00
                     </p>
                 </div>
                 <div class="content__card">
-                    <h1>
+                    <h1 class="gastos">
                         Gastos
-                        <img src="Imagem2.gif" alt="Gastos">
+                        <ion-icon name="trending-down"></ion-icon>
                     </h1>
                     <p>
                         R$ 1500,00
