--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
         <title>Finanças</title>
     </head>
     <body>
-        
         <header class="content__header">
-            <img src="logo1.png">
+            <img src="Image.svg">
         </header>
         <main class="content__main">
             <section class="content__section">
                 <div class="content__card">
                     <h1>
                         Proventos
-                        <ion-icon name="trending-up"></ion-icon>
+                        <ion-icon name="arrow-up-outline"></ion-icon>
                     </h1>
                     <p>
                         R$ 1500,00
@@ -28,7 +27,7 @@
                 <div class="content__card">
                     <h1 class="gastos">
                         Gastos
-                        <ion-icon name="trending-down"></ion-icon>
+                        <ion-icon name="arrow-down-outline"></ion-icon>
                     </h1>
                     <p>
                         R$ 1500,00
@@ -62,11 +61,11 @@
                     <i></i>
                 </div>
                 <div class="content___desc___radio">
-                    <input type="radio">
+                    <input type="radio" name="modalidade">
                     <span>
                         Entrada
                     </span>
-                    <input type="radio">
+                    <input type="radio" name="modalidade">
                     <span>
                         Saida
                     </span>
@@ -145,6 +144,256 @@
                             <ion-icon name="trash-outline"></ion-icon>
                         </td>
                     </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> Salario</td>
+                        <td> R$ 2000,00</td>
+                        <td> Entrada</td>
+                        <td> 24/08/2023</td>
+                        <td class="btn-actions">
+                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="trash-outline"></ion-icon>
+                        </td>
+                    </tr>
                 </table>
             </div>
         </main>
@@ -153,17 +402,17 @@
                 DevDu 2023, © Copyright - Todos os Direitos Reservados.
             </div>
             <div class="links">
-                <a href="https://www.instagram.com/t_wo_d/" target="_blank">
+                <a href="https://www.instagram.com/t_wo_d/" target="_blank" id="insta">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="https://www.linkedin.com/in/eduardo-santos-pessoa-602ab4231/" target="_blank">
+                <a href="https://www.linkedin.com/in/eduardo-santos-pessoa-602ab4231/" target="_blank" id="lin">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="https://www.facebook.com/Eduardo.santos3117" target="_blank">
+                <a href="https://www.facebook.com/Eduardo.santos3117" target="_blank" id="face">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
             </a>
-            <a href="https://github.com/Edusanpe" target="_blank">
+            <a href="https://github.com/Edusanpe" target="_blank" id="git">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
         </div>
