--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon " href="coin.png" type="img/icon">
+        <link rel="icon" href="img/coin.png" type="img/icon">
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <title>Finanças</title>
     </head>
     <body>
         <header class="content__header">
-            <img src="Image.svg">
+            <img src="img/Image.svg">
         </header>
         <main class="content__main">
             <section class="content__section">
